[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-sqlite-multiuser"
version = "0.1.0"
description = "High-end multi-user SQLite todo app"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2.0"
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
